--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=0" />
-
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Todo List" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Axios todolist with real api</title>
   </head>
